--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,27 @@
-{% extends "base.html" %}
-{% block content %}
-<h2>All Students</h2>
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Age</th>
-        <th>Actions</th>
-    </tr>
-    {% for student in students %}
-    <tr>
-        <td>{{ student.id }}</td>
-        <td>{{ student.name }}</td>
-        <td>{{ student.email }}</td>
-        <td>{{ student.age }}</td>
-        <td>
-            <a href="{{ url_for('edit_student', id=student.id) }}">Edit</a> |
-            <a href="{{ url_for('delete_student', id=student.id) }}" onclick="return confirm('Are you sure?')">Delete</a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Students List</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Students List</h1>
+    <a href="{{ url_for('add_student') }}">Add Student</a>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Age</th>
+        </tr>
+        {% for student in students %}
+        <tr>
+            <td>{{ student.id }}</td>
+            <td>{{ student.name }}</td>
+            <td>{{ student.email }}</td>
+            <td>{{ student.age }}</td>
+        </tr>
+        {% endfor %}
+    </table>
+</body>
+</html>
