--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -1,13 +1,24 @@
-{% extends "base.html" %}
-{% block content %}
-<h2>Add Student</h2>
-<form method="POST">
-    <label>Name:</label>
-    <input type="text" name="name" required><br>
-    <label>Email:</label>
-    <input type="email" name="email" required><br>
-    <label>Age:</label>
-    <input type="number" name="age" required><br>
-    <input type="submit" value="Add Student">
-</form>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Add Student</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Add Student</h1>
+    <form method="POST">
+        <label>Name:</label><br>
+        <input type="text" name="name" required><br><br>
+
+        <label>Email:</label><br>
+        <input type="email" name="email" required><br><br>
+
+        <label>Age:</label><br>
+        <input type="number" name="age" required><br><br>
+
+        <input type="submit" value="Add Student">
+    </form>
+    <br>
+    <a href="{{ url_for('home') }}">Back to Home</a>
+</body>
+</html>
